@@ -72,7 +72,7 @@ class JHelperRoute
 				$this->view  => array((int) $id)
 			);
 		}
-		if (!isset($link))
+		if (empty($link))
 		{
 			// Create the link
 			$link = 'index.php?option=' . $this->extension . '&view=' . $this->view . '&id=' . $id;
@@ -81,12 +81,15 @@ class JHelperRoute
 		if ($catid > 1)
 		{
 			$categories = JCategories::getInstance($name);
-			$category = $categories->get((int) $catid);
-			if ($category)
+			if ($categories)
 			{
-				$needles['category'] = array_reverse($category->getPath());
-				$needles['categories'] = $needles['category'];
-				$link .= '&catid=' . $catid;
+				$category = $categories->get((int) $catid);
+				if ($category)
+				{
+					$needles['category'] = array_reverse($category->getPath());
+					$needles['categories'] = $needles['category'];
+					$link .= '&catid=' . $catid;
+				}
 			}
 		}
 
